# Joint_Save

./: .gitignore  CONTRIBUTING.md  README.md  TYPECHECK_FIXES_SUMMARY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: e2e.yml
docs/: api-rate-limits.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  manifest.ts  page.tsx
frontend/app/api/analytics/: route.ts
frontend/app/api/pools/: route.ts
frontend/app/dashboard/: DashboardClient.tsx  page.tsx
frontend/app/explore/: page.tsx
frontend/components/: tx-queue-badge.tsx  web3-provider.tsx
frontend/components/create-group/: rotational-form.tsx
frontend/components/dashboard/: analytics.tsx  dashboard-header.tsx  dashboard-tabs.tsx  empty-state.tsx  explore.tsx  first-pool-tooltip.tsx  my-groups.tsx  pool-card.tsx  pool-health-badge.tsx  profile.tsx  transactions.tsx
frontend/components/group/: group-actions.tsx  group-details.tsx  group-members.tsx
frontend/components/landing/: header.tsx
frontend/hooks/: useJointSaveContracts.ts  usePoolHealth.ts
frontend/lib/: analytics.test.ts  analytics.ts  pool-health.test.ts  pool-health.ts  rate-limit.ts  supabase.ts  tx-queue.ts
frontend/lib/data-layer/: PoolDataProvider.tsx
smartcontract/: Cargo.toml
smartcontract/contracts/reputation/: Cargo.toml
smartcontract/contracts/reputation/src/: lib.rs  test.rs
smartcontract/contracts/rotational/src/: lib.rs  test.rs  tests.rs
smartcontract/scripts/: deploy.sh
supabase/migrations/: 20260616080000_analytics_schema.sql  20260622090000_join_requests.sql
(+7 files in other folders)
