[workspace]
members = [
    "contracts/factory",
    "contracts/rotational",
    "contracts/target",
    "contracts/flexible",
    "contracts/yield-strategy",
    "contracts/reputation",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
